SEO: fixed descriptive links and closed header gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2090,7 +2090,7 @@ p {
   display: flex !important;
   justify-content: space-evenly !important;
   align-items: center !important;
-  margin-top: 55px !important;
+  margin-top: 0px !important;
   background: #050505 !important;
   padding: 10px 0 !important;
   z-index: 999 !important;
